--- a/openCVLibrary348/src/main/AndroidManifest.xml
+++ b/openCVLibrary348/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
       android:versionCode="3480"
       android:versionName="3.4.8">
 
-    <uses-sdk android:targetSdkVersion="29" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 </manifest>
